# litestar.dev

./:  CONTRIBUTING.md  .all-contributorsrc  .buildinfo  .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  package-lock.json  package.json  pyproject.toml  search.html  searchindex.js  tailwind.config.js
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml  update-toast.yml
_sources/about/: index.rst.txt  litestar-releases.rst.txt  organization.rst.txt
_static/: index.css  index.js
about/: index.html  litestar-releases.html  organization.html
page/: conf.py  index.css  index.rst
page/_static/: index.css  index.js
page/_templates/: about-extra.html  code.html  hero_content.html  icons.html  landing-page.html  macros.html  menu.html
page/about/: litestar-releases.rst  organization.rst
