[project]
authors = [
    {name = "Janek Nouvertné", email = "provinzkraut@posteo.de"},
    {name = "Jacob Coffee", email = "jacob@z7x.org"},
]
name = "litestar.dev"
description = "Source code for litestar.dev"
readme = "README.md"
version = "0.1.0"
license = {text = "MIT"}
requires-python = ">=3.11,<4.0"
dependencies = [
    "pre-commit<4.0.0,>=3.2.0",
    "litestar-sphinx-theme @ {root:uri}/../litestar-sphinx-theme", # only needed when working on the theme
#    "litestar-sphinx-theme @ git+https://github.com/litestar-org/litestar-sphinx-theme.git@v3",
    "sphinx<8.0.0,>=7.0.0",
]

[tool.pdm.dev-dependencies]
docs = [
    "sphinx-autobuild>=2021.3.14",
]
lint = [
    "ruff>=0.0.292",
    "codespell>=2.2.6",
    "pyright>=1.1.329",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    'README.md',
    '/Makefile',
    '/page',
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pyright]
include = ["page"]

[tool.ruff]
select = ["ALL"]
ignore = [
    "E501", # pycodestyle line too long, handled by black
    "D100", # pydocstyle - missing docstring in public module
    "D101", # pydocstyle - missing docstring in public class
    "D102", # pydocstyle - missing docstring in public method
    "D103", # pydocstyle - missing docstring in public function
    "D104", # pydocstyle - missing docstring in public package
    "D105", # pydocstyle - missing docstring in magic method
    "D106", # pydocstyle - missing docstring in public nested class
    "D107", # pydocstyle - missing docstring in __init__
    "D202", # pydocstyle - no blank lines allowed after function docstring
    "D205", # pydocstyle - 1 blank line required between summary line and description
    "D415", # pydocstyle - first line should end with a period, question mark, or exclamation point
    "UP037", # pyupgrade - removes quotes from type annotation
    "A003", # flake8-builtins - class attribute {name} is shadowing a python builtin
    "B010" # flake8-bugbear - do not call setattr with a constant attribute value
]
line-length = 120
src = ["page"]
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "google"
